app/globals.css
/* ... */
.local-loaded-pic {
  border-radius: 1rem;
}

.about-pic {
  border-radius: 1rem 1rem 0 0;
}

.App {
  width: 92rem;
  max-width: 92rem;
  min-height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0 auto 2rem auto;
  flex-grow: 1;
}

.tags-form {
  width: 65%;
  justify-content: space-between;
  /* margin-top: 1.5rem; */
  margin-bottom: 1.5rem;
  border-bottom: 1px solid aliceblue; /* Leave border vals as px so they don't size-up with zoom*/
}

form button {
  font-size: 1.125rem;
  margin: 0.5rem;
  padding: 0.75rem;
  border: 0.125rem solid black;
  border-radius: 0.33rem;
}

p {
  color: aliceblue;
  font-size: 1.125rem;
}

/* THE NEXT TWO ARE FOR THE ACCORDION ACTION ON THE FORM */

#tag-search {
  max-height: 0;
  opacity: 0;
  transition: visibility 0s ease, max-height 1s ease, opacity 0.25s ease ;
  visibility: hidden;
}

#tag-search:not([aria-hidden="true"]) {
  max-height: 16.875rem; /* 270px */
  margin-top: 1.5rem;
  opacity: 1;
  visibility: visible;
  transition: visibility 12s ease, max-height 0.5s ease, opacity 1.25s ease ;
}

#tags-wrapper {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  border-bottom: 1px solid aliceblue; /* Leave border vals as px so they don't size-up with zoom*/
  padding-bottom: 0.5rem;
  /* min-height: 6.25rem; */
  font-size: 1.125rem;
}

#form-label {
  color: aliceblue;
  font-size: 1.125rem;
  margin-left: 0.5rem;
  font-weight: bold;
  border-bottom: 1px solid aliceblue; /* Leave border vals as px so they don't size-up with zoom*/
}

input[type="checkbox"] {
  appearance: none;
  opacity: 0;
  margin: 0px;
}

.tag {
  color: black;
  background-color: #e9e9ed;
  margin: 0.5rem;
  padding: 0.875rem 0.5rem;
  border: 2px solid black; /* Leave border vals as px so they don't size-up with zoom*/
  border-radius: 0.33rem;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
}

.checked {
  filter: invert(1);
  /* font-weight: bold; */
}

label:hover, 
label:active, 
label:focus-within, 
.buttons-wrapper button:hover,
.buttons-wrapper button:active,
.buttons-wrapper button:focus-within,
.load-more:hover,
.load-more:active,
.load-more:focus-within,
#accordion-trigger:hover,
#accordion-trigger:active,
#accordion-trigger:focus-within {
  outline: #3daee9 solid 0.25rem;
}

.buttons-wrapper {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  padding: 0.5rem 0;
}

.instruction {
  margin: 0 auto 1.5rem auto;
  font-style: italic;
}

.thumbnail {
  width: 100%;
  height: 100%;
  object-fit: cover;
  /* Add transition to the parent selector (not the hover selector) to make transition smooth on both hover-over/hover-off. */
  transition: transform 500ms;
  border: 2px black solid; /* Leave border vals as px so they don't size-up with zoom*/
  border-radius: 0.5rem;
  background-clip: border-box;
  box-sizing: border-box;
}

.grid-wrapper {
  display: flex;
  flex-direction: column;
}

.image-grid {
  width: 92rem;
  display: grid;
  gap: 1rem;
  grid-template-columns: repeat(auto-fill, minmax(22rem, 1fr));
}

.img-card {
  display: flex;
  flex-direction: column;
}

.img-card:hover > .thumbnail,
.img-card:focus-visible > .thumbnail {
  border-color: #c1ccc5;
}

.img-card:hover > .img-footer,
.img-card:focus-visible > .img-footer  {
  filter: invert(1);
  font-weight: bold;
}

.load-more, #accordion-trigger {
  margin-top: 2rem;
  border: 0.125rem solid black;
  border-radius: 0.33rem;
  padding: 0.75rem;
  font-size: 1.0125rem;
  line-height: 1.5rem; /* to cope with UTF-8 special character interfering with button text height*/
}

ImageViewer {
  background-color: rgba(0,0,0,0.9);
  max-height: 50%;
}

figcaption {
  color: aliceblue;
}

.mobile-image-grid {
  max-width: 100%;
}

.mobile-figure {
  max-width: min-content;
  margin: 0;
  margin-bottom: 1rem;
  box-shadow: rgba(0, 0, 0, 0.2) 0 0.25rem 0.025rem 0, rgba(0, 0, 0, 0.2) 0 0.025rem 0.5rem 0.025rem, rgba(0, 0, 0, 0.4) 0 0.125rem 0.25rem 0.025rem;
  border-radius: 0 0 1rem 1rem;

}

.mobile-thumbnail {
  display: block;
  max-width: 25rem;
  height: auto;
  box-sizing: border-box;
  border-top: 0.125rem solid black;
  border-left: 0.125rem solid black;
  border-right: 0.125rem solid black;
}

.mobile-caption {
  text-align: justify;
  box-sizing: content-box;
  border-left: 0.125rem solid black;
  border-right: 0.125rem solid black;
  border-bottom: 0.125rem solid black;
  border-radius: 0 0 1rem 1rem;
  padding: 0.5rem;
  background-color: rgba(0,0,0,0.75);
}

footer {
  border-top: 0.2rem solid aliceblue;
  /* background-color: rgba(0,0,0,0.75); */
  background-color: rgba(25,25,25);

  height: 6rem;
  color: aliceblue;
  display: flex;
  align-items: center;
  justify-content: center;
}

.img-footer {
  height: fit-content;
  border: none;
  border-bottom: 0.2rem solid aliceblue;
  border-radius: 0.5rem;
  padding: 0.25rem 0.25rem 0.5rem 0.25rem; /* T R B L */
  margin-top: 0.5rem;
} 

.footer-section {
  display: flex;
  justify-content: center;
  align-items: center;
}

.footer-img {
  margin: 0 1rem;
}

.footer-section p {
  margin: 0;
}

.footer-section .footer-icon {
  margin: 0 0 0 1rem;
  color: aliceblue;
}

.footer-section .footer-icon svg {
  width: 2rem;
  fill: aliceblue;
}

.footer-section .footer-icon svg:hover {
  fill: purple;
}

/* 1520px */
@media (max-width: 95rem) {
  .App, .image-grid, .tags-form {
    width: auto;
  }

  .image-grid {
    margin-right: 1rem;
    margin-left: 1rem;
  }
}
/* ... */

